namespaces/live.cloud-platform.service.justice.gov.uk/hmpps-electronic-monitoring-api/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: "hmpps-electronic-monitoring-api"
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "development"
    pod-security.kubernetes.io/enforce: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "HMPPS"
    cloud-platform.justice.gov.uk/slack-channel: "electronic-monitoring-api"
    cloud-platform.justice.gov.uk/application: "Electronic Monitoring API"
    cloud-platform.justice.gov.uk/owner: "Electronic Monitoring: em-api@justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/hmpps-electronic-monitoring-api"
    cloud-platform.justice.gov.uk/team-name: "hmpps-electronic-monitoring"
    cloud-platform.justice.gov.uk/review-after: ""
